--- a/views/about.html
+++ b/views/about.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to the About Page</h1>
     <nav>
-        <a href="/">Home</a> |
+        <a href="/">Blog</a> |
         <a href="/contact">Contact</a>
     </nav>
     
