--- a/views/blog.html
+++ b/views/blog.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to the Blog</h1>
     <nav>
-        <a href="/">Home</a> |
+        <a href="/">Blog</a> |
         <a href="/about">About</a> |
         <a href="/contact">Contact</a>
     </nav>
