--- a/views/contact.html
+++ b/views/contact.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Welcome to the Contact Page</h1>
     <nav>
-        <a href="/">Home</a> |
+        <a href="/">Blog</a> |
         <a href="/about">About</a>
     </nav>
 
